# shop-ecommerce

./: .env.example  README.md  docker-compose.dev.yml  init-postgres.sh
api-gateway/: Dockerfile.dev  go.mod  go.sum
api-gateway/cmd/: main.go
cart-service/: go.mod  go.sum
cart-service/cmd/: main.go
docs/observability/: otlp-migration.md
identity-service/: go.mod
identity-service/cmd/: main.go
inventory-service/: Cargo.toml  Dockerfile
inventory-service/config/: config.toml
inventory-service/src/: config.rs  handlers.rs  main.rs  models.rs
k8s/config/: env-vars.yml  fluentd-configmap.yml  prometheus-configmap.yml
k8s/deployments/: api-gateway.yml  cart-db.yml  cart-service.yml  elasticsearch.yml  fluentd.yml  grafana.yml  identity-service-db.yml  identity-service.yml  inventory-service-rust.yml  kibana.yml  order-service-db.yml  order-service-rust.yml  payment-service-rust.yml  payment.yml  product-service-db.yml  product-service.yml  prometheus.yml  rabbitmq.yml  zipkin.yml
k8s/namespace/: shopecommerce.yml
k8s/networking/: load-balancer.yml  node-port.yml
k8s/volumes/: cart-db-pvc.yml  grafana-pvc.yml  identity-db-pvc.yml  order-db-pvc.yml  product-db-pvc.yml  rabbitmq-pvc.yml
observability/: prometheus.yml
order-service/: go.mod
order-service-rust/: Cargo.toml  Dockerfile
order-service-rust/config/: config.toml
order-service-rust/src/: config.rs  handlers.rs  main.rs  models.rs
payment-service/: Cargo.toml  Dockerfile
product-service/: go.mod
terraform/: 1-vpc.tf  2-igw.tf  3-subnets.tf  4-nat.tf  5-routes.tf  6-eks.tf
(+21 files in other folders)
