[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
